--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,8 @@ apply plugin: 'kotlin-android'
 
 apply plugin: 'kotlin-android-extensions'
 
+apply plugin: 'kotlin-kapt'
+
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.0"
@@ -13,6 +15,10 @@ android {
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
+        buildConfigField "String", "BASE_URL", '\"https://api.themoviedb.org/3/\"'
+        buildConfigField "String", "API_KEY", ""
+        buildConfigField "String", "LANGUAGE", ""
+        buildConfigField "String", "IMAGES", ""
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -34,6 +40,11 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
+    // add library arch
+    implementation "androidx.lifecycle:lifecycle-extensions:$architecture_version"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$architecture_version"
+    kapt "androidx.lifecycle:lifecycle-compiler:$architecture_version"
+
     implementation 'androidx.recyclerview:recyclerview:1.1.0-beta01'
     implementation 'com.google.android.material:material:1.1.0-alpha08'
 
@@ -49,4 +60,10 @@ dependencies {
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
     implementation 'com.squareup.okhttp3:logging-interceptor:3.14.2'
+
+    // add library coroutines
+    // you can read more about coroutines via this link
+    // https://github.com/Kotlin/kotlinx.coroutines
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.0-M2'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.0-M2'
 }
