--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility 1.8
+        targetCompatibility 1.8
+    }
 }
 
 dependencies {
@@ -39,7 +43,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
     implementation 'androidx.recyclerview:recyclerview:1.1.0-beta01'
-    implementation 'com.google.android.material:material:1.1.0-alpha08'
+    implementation 'com.android.support:design:28.0.0'
 
     // add library anko
     implementation "org.jetbrains.anko:anko-sqlite:$anko_version"
