complete approach for favorites movies to save anko sqlite, yeay !

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme" tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".utama.detail.Detail">
+        <activity android:name=".utama.detail.Detail"
+        android:parentActivityName=".utama.MainActivity">
         </activity>
         <activity android:name=".utama.MainActivity">
             <intent-filter>
