--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,8 @@ apply plugin: 'kotlin-android'
 
 apply plugin: 'kotlin-android-extensions'
 
+apply plugin: 'kotlin-kapt'
+
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.0"
@@ -72,4 +74,10 @@ dependencies {
     implementation "org.mockito:mockito-inline:$mockito"
     testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:$mockKotlin"
     testImplementation "de.jodamob.kotlin:kotlin-runner-junit4:$mockRunner"
+
+    // add library dagger2
+    implementation "com.google.dagger:dagger-android:$dagger_version"
+    implementation "com.google.dagger:dagger-android-support:$dagger_version"
+    kapt "com.google.dagger:dagger-android-processor:$dagger_version"
+    kapt "com.google.dagger:dagger-compiler:$dagger_version"
 }
