--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ buildscript {
     ext.mockito = '2.8.47'
     ext.mockKotlin = '2.1.0'
     ext.mockRunner = '0.3.1'
+    ext.dagger_version = '2.21'
     repositories {
         google()
         jcenter()
