change notifDataSetChange to diffCallback !

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,4 +80,7 @@ dependencies {
     implementation "com.google.dagger:dagger-android-support:$dagger_version"
     kapt "com.google.dagger:dagger-android-processor:$dagger_version"
     kapt "com.google.dagger:dagger-compiler:$dagger_version"
+
+    // add library pagination
+    implementation 'androidx.paging:paging-runtime:2.1.0'
 }
